add home page changes and cart icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Flavor Fiest | HOME</title>
   <link rel="stylesheet" href="style.css">
 
@@ -114,12 +114,15 @@
 
   </header>
 
+  <!-- cart icon for small devices -->
   <div id="cartsmall">
 
     <div class="cartbackground">
-      
+      <i class="fa fa-shopping-bag"></i>
+
     </div>
   </div>
+  <!-- cart icon for small devices -->
 
   <section class="carouselmain">
     <div class="carousel-div">
@@ -261,7 +264,7 @@
     <div class="container-fluied specialOfferdiv">
       <div class="row mx-auto">
         <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center" style="height: 650px;">
-          <div class="text-center overflow-hidden">
+          <div class="text-center offer-text-div">
 
             <h1 class="offer-txt">Special</h1>
             <h1 class="offer-txt">Offers</h1>
@@ -330,10 +333,10 @@
         </div>
         <div class="col-md-4 d-flex align-items-center justify-content-center mt-4 mb-4">
           <iframe id="map-canvas" class="map_part" width="100%" height="250" frameborder="0" scrolling="no"
-          marginheight="0" marginwidth="0"
-          src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=university of ruhuna&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">Powered
-          by <a href="https://embedgooglemaps.com">html embed google maps</a> and <a href="https://casinomga.se/">nya
-            mga casino</a></iframe>
+            marginheight="0" marginwidth="0"
+            src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=university of ruhuna&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">Powered
+            by <a href="https://embedgooglemaps.com">html embed google maps</a> and <a href="https://casinomga.se/">nya
+              mga casino</a></iframe>
         </div>
 
         <div class="col-md-2 col-sm-12 text-white font-light d-none d-md-block" style="font-size: 18px;">
@@ -372,8 +375,7 @@
               </svg>
             </li>
             <li>
-              <svg class="text-red" xmlns="http://www.w3.org/2000/svg" width="50" height="50"
-                viewBox="0 0 256 256">
+              <svg class="text-red" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 256 256">
                 <path fill="currentColor"
                   d="M137.54 186.36a8 8 0 0 1 0 11.31l-9.94 10a56 56 0 0 1-79.22-79.27l24.12-24.12a56 56 0 0 1 76.81-2.28a8 8 0 1 1-10.64 12a40 40 0 0 0-54.85 1.63L59.7 139.72a40 40 0 0 0 56.58 56.58l9.94-9.94a8 8 0 0 1 11.32 0Zm70.08-138a56.08 56.08 0 0 0-79.22 0l-9.94 9.95a8 8 0 0 0 11.32 11.31l9.94-9.94a40 40 0 0 1 56.58 56.58l-24.12 24.14a40 40 0 0 1-54.85 1.6a8 8 0 1 0-10.64 12a56 56 0 0 0 76.81-2.26l24.12-24.12a56.08 56.08 0 0 0 0-79.24Z" />
               </svg>
