--- a/pages/menu.html
+++ b/pages/menu.html
@@ -79,16 +79,16 @@
                 aria-current="page">Home</a>
             </li>
             <li class="nav-item">
-              <a href="/pages/menu.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Menu</a>
+              <a href="./menu.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Menu</a>
             </li>
             <li class="nav-item">
-              <a href="/pages/aboutUs.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">About us</a>
+              <a href="./aboutUs.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">About us</a>
             </li>
             <li class="nav-item">
-              <a href="/pages/contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Contact</a>
+              <a href="./contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Contact</a>
             </li>
             <li class="nav-item d-block d-md-none">
-              <a href="/pages/contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Sign in /
+              <a href="./contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Sign in /
                 Register</a>
             </li>
 
