menu search bug fix

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -128,7 +128,7 @@
     <div class="row mt-4">
       <div class="col-md-3 fx-content">
         <div class="sticky">
-          <div class="input-group mb-3">
+          <div class="input-group searchMenu mb-3">
             <input type="text" class="form-control" placeholder="Search Products.." aria-label="Recipient's username"
               aria-describedby="basic-addon2">
             <div class="input-group-append">
