contact page add

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body id="contactPage">
   <!-- Dont Delete or Edit start  -->
   <header class="bg-white sticky-top">
     <div class="row  d-none d-md-block top-header-div mx-auto overflow-hidden">
@@ -99,7 +99,7 @@
 
           </ul>
 
-          
+
 
 
           <!-- <div class="d-block d-sm-none ">
@@ -132,55 +132,58 @@
 
   <!-- Start Your Code Here  -->
 
-  <div class="continer-fluied">
+  <div class="continer-fluied mainDiv">
     <div class="col-md-12">
       <div class="row mx-auto overflow-hidden">
         <div class="col-md-6 animate__animated animate__fadeInLeft">
-          <img src="./../assets/img/contact/mm.png" alt="" width="100%">
+          <img src="./../assets/img/contact/mm.png" alt="" width="100%" style="margin-left:-19px;">
         </div>
-        <div class="col-md-6">
-          <div class="contat-div animate__animated animate__backInRight">
-            <div class="row">
-              <div class="col-md-3 flex items-center p-4">
-                <img src="/assets/img/contact/call.png" alt="" width="50px">
-              </div>
-              <div class="col-md-9">
-                <h4 class="text-[25px] font-thin">Contact Number</h4>
-                <hr>
-                <p class="text-[17px] font-normal"><a href="tel:+325-12345-65478">077 0204135
-                    <br>011 2544544
-                  </a></p>
+        <div class="col-md-6 d-flex justify-content-end">
+          <div>
+            <div class="contat-div animate__animated animate__backInRight">
+              <div class="row">
+                <div class="col-md-3 flex items-center p-4">
+                  <img src="/assets/img/contact/call.png" alt="" width="50px">
+                </div>
+                <div class="col-md-9">
+                  <h4 class="text-[25px] font-thin">Contact Number</h4>
+                  <hr>
+                  <p class="text-[17px] font-normal"><a href="tel:+325-12345-65478">077 0204135
+                      <br>011 2544544
+                    </a></p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="contat-div div-2 animate__animated animate__backInRight">
-            <div class="row">
-              <div class="col-md-3 flex items-center p-4">
-                <img src="/assets/img/contact/email.png" alt="" width="50px">
-              </div>
-              <div class="col-md-9 d-flex align-items-center justify-content-center">
-                <div class="flex-col text-center">
-                  <h4 class="text-[25px] font-thin">Email Address</h4>
-                  <hr>
-                  <p class="text-[17px] font-normal"><a
-                      href="mailto:flavorfiestorders@gmail.com">flavorfiestorders@gmail.com</a></p>
+            <div class="contat-div div-2 animate__animated animate__backInRight">
+              <div class="row">
+                <div class="col-md-3 flex items-center p-4">
+                  <img src="/assets/img/contact/email.png" alt="" width="50px">
+                </div>
+                <div class="col-md-9 d-flex align-items-center justify-content-center">
+                  <div class="flex-col text-center">
+                    <h4 class="text-[25px] font-thin">Email Address</h4>
+                    <hr>
+                    <p class="text-[17px] font-normal"><a
+                        href="mailto:flavorfiestorders@gmail.com">flavorfiestorders@gmail.com</a></p>
 
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="contat-div animate__animated animate__backInRight">
+              <div class="row">
+                <div class="col-md-3 flex items-center p-4">
+                  <img src="/assets/img/contact/map (1).png" alt="" width="50px">
+                </div>
+                <div class="col-md-9">
+                  <h4 class="text-[25px] font-thin">Our Location</h4>
+                  <hr>
+                  <p class="text-[17px] font-normal">Flavor Fiest food , Hambanthota Road , Matara 01, Sri Lanka</p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="contat-div animate__animated animate__backInRight">
-            <div class="row">
-              <div class="col-md-3 flex items-center p-4">
-                <img src="/assets/img/contact/map (1).png" alt="" width="50px">
-              </div>
-              <div class="col-md-9">
-                <h4 class="text-[25px] font-thin">Our Location</h4>
-                <hr>
-                <p class="text-[17px] font-normal">Flavor Fiest food , Hambanthota Road , Matara 01, Sri Lanka</p>
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
 
@@ -190,65 +193,64 @@
 
   </div>
 
-  <section class="contact mt-[90px]">
+  <section class="contact" style="margin-top: 90px;">
     <div class="container">
       <div class="row mt-4">
 
-        <div class="col-md-7 col-sm-12">
+        <div class="col-md-7 col-sm-12 px-4">
           <iframe id="map-canvas" class="map_part" width="100%" height="450" frameborder="0" scrolling="no"
             marginheight="0" marginwidth="0"
             src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=university of ruhuna&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">Powered
             by <a href="https://embedgooglemaps.com">html embed google maps</a> and <a href="https://casinomga.se/">nya
               mga casino</a></iframe>
         </div>
+        <div class="card m-0 p-0 col-md-5 col-sm-12">
+          <div class="card-header" style="background: #ff001e;">
 
-        <div class="col-md-5 col-sm-12 p-4" style=" border-radius: 8px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+            <h3 class="text-uppercase text-white text-center">
+              Contact Us</h3>
+          </div>
+          <div class="card-body" style="background: #fef5f6;">
+            <form action="" method="post">
+              <div class="row">
+                <div class="col-sm-6 pb-3">
+                  <div class="form-group">
+                    <input name="f_name" type="text" class="form-control" placeholder="First name" required>
+                  </div>
+                </div>
+                <div class="col-sm-6 pb-3">
+                  <div class="form-group">
+                    <input name="l_name" type="text" class="form-control" placeholder="Last name" required>
+                  </div>
+                </div>
+                <div class="col-sm-6 pb-3">
+                  <div class="form-group">
+                    <input name="email" type="email" class="form-control" placeholder="Email" required>
+                  </div>
+                </div>
+                <div class="col-sm-6 pb-3">
+                  <div class="form-group">
+                    <input name="number" type="text" class="form-control" placeholder="Phone number" required>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <textarea name="message" class="form-control required" rows="5"
+                      placeholder="Your message"></textarea>
+                  </div>
 
-          <h3 class="line-bottom mt-0 text-[30px] uppercase mb-3">
-            Submit your message</h3>
-          <form action="" method="post">
-            <div class="row">
-              <div class="col-sm-6 pb-3">
-                <div class="form-group">
-                  <input name="f_name" type="text" class="form-control" placeholder="First name" required>
+                </div>
+                <div class="col-md-12 mt-3">
+                  <input type="submit" value="Send Message" class="btn btn-primary mr-5"
+                    style="background-color:#ff001e;">
                 </div>
               </div>
-              <div class="col-sm-6 pb-3">
-                <div class="form-group">
-                  <input name="l_name" type="text" class="form-control" placeholder="Last name" required>
-                </div>
-              </div>
-              <div class="col-sm-6 pb-3">
-                <div class="form-group">
-                  <input name="email" type="email" class="form-control" placeholder="Email" required>
-                </div>
-              </div>
-              <div class="col-sm-6 pb-3">
-                <div class="form-group">
-                  <input name="number" type="text" class="form-control" placeholder="Phone number" required>
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <textarea name="message" class="form-control required" rows="5" placeholder="Your message"></textarea>
-                </div>
+            </form>
 
-              </div>
-              <div class="col-md-12 mt-3">
-                <input type="submit" value="Send Message" class="btn btn-primary mr-5"
-                  style="background-color:#007bff;">
-              </div>
-            </div>
-          </form>
-
-          <!--<ul class="styled-icons icon-dark icon-sm icon-circled mb-20">
-            <li><a href="#" data-bg-color="#3B5998"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#" data-bg-color="#02B0E8"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#" data-bg-color="#006f37"><i class="fa fa-tripadvisor" aria-hidden="true"></i></a></li>
-          </ul>-->
-
+          </div>
         </div>
+
+
       </div>
     </div>
   </section>
