sign in rep/ contact page add(not rep)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Flavor Fiest | HOME</title>
   <link rel="stylesheet" href="style.css">
 
@@ -88,7 +88,7 @@
               <a href="pages/contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Contact</a>
             </li>
             <li class="nav-item d-block d-md-none">
-              <a href="pages/contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Sign in /
+              <a href="pages/signin.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Sign in /
                 Register</a>
             </li>
 
@@ -116,11 +116,13 @@
 
   <!-- cart icon for small devices -->
   <div id="cartsmall">
+    <a href="./pages/add_cart.html">
+      <div class="cartbackground">
+        <i class="fa fa-shopping-bag"></i>
 
-    <div class="cartbackground">
-      <i class="fa fa-shopping-bag"></i>
+      </div>
+    </a>
 
-    </div>
   </div>
   <!-- cart icon for small devices -->
 
