--- a/pages/menu.html
+++ b/pages/menu.html
@@ -47,12 +47,12 @@
         <div class="col-md-4 col-sm-8 ">
           <h1 class="site-name text-center ">Flavor Fiest</h1>
         </div>
-        <div class="col-md-4 d-flex justify-content-end" onClick="window.location='/pages/signin.html';">
+        <div class="col-md-4 d-flex justify-content-end" onClick="window.location='./signin.html';">
           <div class="signinDiv text-center">
-            <a href=/pages/signin.html>Sign in</a>
+            <a href="./signin.html">Sign in</a>
           </div>
           <div class="registerDiv">
-            <a href="/pages/signin.html">Register</a>
+            <a href="./signin.html">Register</a>
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
               <a href="./contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Contact</a>
             </li>
             <li class="nav-item d-block d-md-none">
-              <a href="./contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Sign in /
+              <a href="./signin.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Sign in /
                 Register</a>
             </li>
 
@@ -116,11 +116,12 @@
 
   <!-- cart icon for small devices -->
   <div id="cartsmall">
+    <a href="./add_cart.html">
+      <div class="cartbackground">
+        <i class="fa fa-shopping-bag"></i>
 
-    <div class="cartbackground">
-      <i class="fa fa-shopping-bag"></i>
-
-    </div>
+      </div>
+    </a>
   </div>
   <!-- cart icon for small devices -->
   
@@ -653,6 +654,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+    <script src="./../script.js"></script>
 </body>
 
 </html>
