--- a/pages/contact.html
+++ b/pages/contact.html
@@ -148,7 +148,7 @@
             <div class="contat-div animate__animated animate__backInRight">
               <div class="row">
                 <div class="col-md-3 flex items-center p-4">
-                  <img src="/assets/img/contact/call.png" alt="" width="50px">
+                  <img src="./../assets/img/contact/call.png" alt="" width="50px">
                 </div>
                 <div class="col-md-9">
                   <h4 class="text-[25px] font-thin">Contact Number</h4>
@@ -162,7 +162,7 @@
             <div class="contat-div div-2 animate__animated animate__backInRight">
               <div class="row">
                 <div class="col-md-3 flex items-center p-4">
-                  <img src="/assets/img/contact/email.png" alt="" width="50px">
+                  <img src="./../assets/img/contact/email.png" alt="" width="50px">
                 </div>
                 <div class="col-md-9 d-flex align-items-center justify-content-center">
                   <div class="flex-col text-center">
@@ -178,7 +178,7 @@
             <div class="contat-div animate__animated animate__backInRight">
               <div class="row">
                 <div class="col-md-3 flex items-center p-4">
-                  <img src="/assets/img/contact/map (1).png" alt="" width="50px">
+                  <img src="./../assets/img/contact/map (1).png" alt="" width="50px">
                 </div>
                 <div class="col-md-9">
                   <h4 class="text-[25px] font-thin">Our Location</h4>
@@ -199,7 +199,7 @@
     <div class="sm-contat-div animate__animated animate__backInDown">
       <div class="row ">
         <div class="col-3 flex items-center p-4">
-          <img src="/assets/img/contact/call.png" alt="" width="40px">
+          <img src="./../assets/img/contact/call.png" alt="" width="40px">
         </div>
         <div class="col-9">
           <h5 class="font-thin">Contact Number</h5>
@@ -216,7 +216,7 @@
     <div class="sm-contat-div animate__animated animate__backInDown">
       <div class="row ">
         <div class="col-3 flex items-center p-4">
-          <img src="/assets/img/contact/email.png" alt="" width="50px">
+          <img src="./../assets/img/contact/email.png" alt="" width="50px">
         </div>
         <div class="col-9">
           <h5 class="font-thin">Email Address</h5>
@@ -233,7 +233,7 @@
     <div class="sm-contat-div animate__animated animate__backInDown">
       <div class="row ">
         <div class="col-3 flex items-center p-4">
-          <img src="/assets/img/contact/map (1).png" alt="" width="50px">
+          <img src="./../assets/img/contact/map (1).png" alt="" width="50px">
         </div>
         <div class="col-9">
           <h5 class="font-thin">Our Location</h5>
