--- a/pages/signin.html
+++ b/pages/signin.html
@@ -50,12 +50,12 @@
         <div class="col-md-4 col-sm-8 ">
           <h1 class="site-name text-center ">Flavor Fiest</h1>
         </div>
-        <div class="col-md-4 d-flex justify-content-end" onClick="window.location='/pages/signin.html';">
+        <div class="col-md-4 d-flex justify-content-end" onClick="window.location='./signin.html';">
           <div class="signinDiv text-center">
-            <a href=/pages/signin.html>Sign in</a>
+            <a href=./signin.html>Sign in</a>
           </div>
           <div class="registerDiv">
-            <a href="/pages/signin.html">Register</a>
+            <a href="./signin.html">Register</a>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
               <a href="./contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Contact</a>
             </li>
             <li class="nav-item d-block d-md-none">
-              <a href="./contact.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Sign in /
+              <a href="./signin.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">Sign in /
                 Register</a>
             </li>
 
