--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                 Register</a>
             </li>
 
+            <li class="nav-item">
+              <a href="./pages/add_cart.html" class=" text-white rounded-md px-3 py-2 text-lg font-medium">
+                cart</a>
+            </li>
+
 
           </ul>
 
