cart icon for small devices value update

--- a/pages/add_cart.html
+++ b/pages/add_cart.html
@@ -119,8 +119,8 @@
     <a href="./add_cart.html">
       <div class="cartbackground">
         <i class="fa fa-shopping-bag"></i>
-
       </div>
+      <div class="small-cart-value"> <span> 0 </span></div>
     </a>
   </div>
   <!-- cart icon for small devices -->
