--- a/pages/contact.html
+++ b/pages/contact.html
@@ -131,8 +131,8 @@
     <a href="./add_cart.html">
       <div class="cartbackground">
         <i class="fa fa-shopping-bag"></i>
-
       </div>
+      <div class="small-cart-value"> <span> 0 </span></div>
     </a>
   </div>
   <!-- Dont Delete or Edit End  -->
